// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Search renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM fgQzgA"
        disabled={true}
        placeholder=" "
        type="search"
        value="Text"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM oizIL"
        disabled={true}
        placeholder=" "
        type="search"
        value="Text"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          disabled={true}
          placeholder=" "
          type="search"
          value="Text"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM gyVdQG"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-jjavrh bcqKWo"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM fKJsvd"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-jjavrh bcqKWo"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM kCrhnX"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh bcqKWo"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM fgQzgA"
        placeholder=" "
        readOnly={true}
        type="search"
        value="Read only text"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM oizIL"
        placeholder=" "
        readOnly={true}
        type="search"
        value="Read only text"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          placeholder=" "
          readOnly={true}
          type="search"
          value="Read only text"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM fgQzgA"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM oizIL"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM fgQzgA"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM oizIL"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM fgQzgA"
        dir="rtl"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-gbFqDM oizIL"
        dir="rtl"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          dir="rtl"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-edwNYl epHbuE"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <input
        className="sc-gbFqDM fgQzgA"
        placeholder="medium"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <input
        className="sc-gbFqDM oizIL"
        placeholder="large"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM gnHsuw"
          placeholder="xlarge"
          type="search"
        />
        <label
          className="sc-edwNYl ejNdCL"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM gdmOoz"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM fwbcJs"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk fMtNhl"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
